k8s/delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      labels:
        app: delivery
    spec:
      containers:
        - name: delivery
          image: dodbrian-liveproject-tracing:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: delivery
spec:
  selector:
    app: delivery
  ports:
    - name: http
      port: 8080
      targetPort: 8080
