k8s/logistics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logistics-deployment
  labels:
    app: logistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logistics
  template:
    metadata:
      labels:
        app: logistics
    spec:
      containers:
        - name: logistics
          image: dodbrian-liveproject-tracing:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: logistics
spec:
  selector:
    app: logistics
  ports:
    - port: 8080
      targetPort: 8080
